# lndata_tracker

backend-temas-coincidentes/: .env  auth.py  config.py  main.py  pyproject.toml  requeriments.txt
backend-temas-coincidentes/front-template/: index.html  index.js  styles.css
front-temas-coincidencias/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
front-temas-coincidencias/src/: App.jsx
front-temas-coincidencias/src/components/layout/: Header.jsx
front-temas-coincidencias/src/components/ui/: Badge.jsx  Button.jsx  Chip.jsx  GlassPanel.jsx  LaNacionLogo.jsx  Spinner.jsx
front-temas-coincidencias/src/features/news-analysis/components/: CompetitorResultCard.jsx  FilterPanel.jsx  GapCard.jsx  KPIStatsGrid.jsx
front-temas-coincidencias/src/features/news-analysis/services/: analysisService.js
front-temas-coincidencias/src/features/news-analysis/stores/: useNewsStore.js
front-temas-coincidencias/src/styles/: variables.css.js
